# qmt

./: .cursorignore  README.md  cursor_directory_structure_and_data_int.md  run.py
app/api/: .gitignore
app/gjzqqmt/: .gitignore
app/scripts/: update_bulk.py  update_incre.py
cpp/: .clangd  .gitignore
cpp/include/boost/asio/: defer.hpp  inline_or_executor.hpp  post.hpp  version.hpp
cpp/include/boost/asio/detail/: config.hpp
cpp/include/boost/beast/core/impl/: saved_handler.hpp
cpp/include/boost/math/special_functions/: fourier_transform_daubechies.hpp
cpp/include/boost/smart_ptr/detail/: spinlock.hpp
cpp/include/boost/static_string/: static_string.hpp
cpp/include/misc/: affinity.hpp  logging.hpp  profiler.hpp
cpp/include/tushare/: http.hpp  pipeline.hpp  spec.hpp  store.hpp
cpp/projects/main/: CMakeLists.txt
cpp/src/: main.cpp
cpp/src/misc/: logging.cpp
cpp/src/tushare/: http.cpp  pipeline.cpp  spec.cpp  store.cpp
doc/tushare/: tushare.md
doc/tushare/basic/: bak_basic.md  bse_mapping.md  namechange.md  new_share.md  st.md  stk_managers.md  stk_premarket.md  stk_rewards.md  stock_basic.md  stock_company.md  stock_hsgt.md  stock_st.md  trade_cal.md
doc/tushare/financial/: balancesheet.md  cashflow.md  disclosure_date.md  dividend.md  express.md  fina_audit.md  fina_indicator.md  fina_mainbz.md  forecast.md  income.md
doc/tushare/help/: http获取.md  matlab获取.md  python获取.md  r获取.md  数据库mongo.md  数据库mysql.md  本地化数据.md  调取数据.md
gjzqqmt/: .gitignore  run.md
py/: main.py  mode_assert.py  mode_debug.py  mode_production.py  mode_profile.py
scripts/: analysis.md  analysis.py  set_token.py
